force-app/main/default/objects/Customer_Communication__c/Customer_Communication__c.object-meta.xml
<CustomObject>
    <label>Customer Communication</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Customer Communication #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>