force-app/main/default/objects/Customer_Communication__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>