force-app/main/default/objects/Customer_Communication__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>