force-app/main/default/objects/Customer_Communication__c/fields/Core_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_Case_Id__c</fullName>
    <description>The Core Case Id so we do not create duplicates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Core Case Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>