force-app/main/default/objects/Customer_Communication__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>