force-app/main/default/objects/Customer_Communication__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Customer Communications</relationshipLabel>
    <relationshipName>Customer_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>