force-app/main/default/objects/Customer_Communication__c/fields/Integration_Created__c.field-meta.xml
<CustomField>
    <fullName>Integration_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer communication was created from the integration and does not need to be sent to the Experience API.</description>
    <label>Integration Created</label>
    <type>Checkbox</type>
</CustomField>