force-app/main/default/objects/Customer_Communication__c/fields/Reason_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Contact__c</fullName>
    <label>Reason for Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Charge Dispute</fullName>
            </value>
            <value>
                <fullName>Close Account Request</fullName>
            </value>
            <value>
                <fullName>Compromised Card</fullName>
            </value>
            <value>
                <fullName>Fees/Finance Charges Inquiry</fullName>
            </value>
            <value>
                <fullName>General Account Questions</fullName>
            </value>
            <value>
                <fullName>Payment Inquiry</fullName>
            </value>
            <value>
                <fullName>Payment/Transfer</fullName>
            </value>
            <value>
                <fullName>Report Lost/Stolen</fullName>
            </value>
            <value>
                <fullName>Statement/Billing Inquiry</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>